--- a/app /src/main/AndroidManifest.xml
+++ b/app /src/main/AndroidManifest.xml
@@ -7,11 +7,12 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Будильник"
+        android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         
         <activity
